[gd_scene load_steps=27 format=3 uid="uid://cla0p620pp37m"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_xt61e"]
[ext_resource type="Texture2D" uid="uid://dwg8xpirxf6di" path="res://art/player/character.png" id="2_ayp6g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_76nkm"]
atlas = ExtResource("2_ayp6g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffipp"]
atlas = ExtResource("2_ayp6g")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vey27"]
atlas = ExtResource("2_ayp6g")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc1tu"]
atlas = ExtResource("2_ayp6g")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qahu5"]
atlas = ExtResource("2_ayp6g")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2vtt"]
atlas = ExtResource("2_ayp6g")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijjgh"]
atlas = ExtResource("2_ayp6g")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe0w4"]
atlas = ExtResource("2_ayp6g")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr07b"]
atlas = ExtResource("2_ayp6g")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyb4f"]
atlas = ExtResource("2_ayp6g")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txafs"]
atlas = ExtResource("2_ayp6g")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rp0b"]
atlas = ExtResource("2_ayp6g")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek7ql"]
atlas = ExtResource("2_ayp6g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfo16"]
atlas = ExtResource("2_ayp6g")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1flvf"]
atlas = ExtResource("2_ayp6g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0o6d"]
atlas = ExtResource("2_ayp6g")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sjpg"]
atlas = ExtResource("2_ayp6g")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7dyj"]
atlas = ExtResource("2_ayp6g")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tihbq"]
atlas = ExtResource("2_ayp6g")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uygde"]
atlas = ExtResource("2_ayp6g")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdpqc"]
atlas = ExtResource("2_ayp6g")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8h4c5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76nkm")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffipp")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vey27")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc1tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qahu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2vtt")
}],
"loop": true,
"name": &"slash_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijjgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe0w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr07b")
}],
"loop": true,
"name": &"slash_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyb4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txafs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rp0b")
}],
"loop": true,
"name": &"slash_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek7ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfo16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1flvf")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0o6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sjpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7dyj")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tihbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uygde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdpqc")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ukbq"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dt32f"]
radius = 12.0

[node name="player" type="CharacterBody2D"]
light_mask = 3
script = ExtResource("1_xt61e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_8h4c5")
animation = &"idle_down"
frame_progress = 0.733294

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_4ukbq")

[node name="player_hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_dt32f")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="plains_camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1143
limit_bottom = 648

[node name="small_forest_camera" type="Camera2D" parent="."]
position = Vector2(216, 92)
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1143
limit_bottom = 648

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(0.239216, 0.545098, 0.858824, 1)
offset_left = -6.0
offset_top = -19.0
offset_right = 122.0
offset_bottom = 5.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
